# ModelFusion-3D-Pose-Estimation

./: README.md
depth-estimation-main/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
depth-estimation-main/launch/: depth.launch
depth-estimation-main/src/: main.py
depth-estimation-main/src/utils/udepth/CPD/: sod_mask.py
depth-estimation-main/src/utils/udepth/utils/: data.py  utils.py
yolo_object_detection/: .gitignore  CMakeLists.txt  README.md  arm_camera_calibration_parameters.npz  package.xml
yolo_object_detection/action/: OnYolo.action
yolo_object_detection/launch/: yolo_inference.launch
yolo_object_detection/msg/: BoundingBox.msg
yolo_object_detection/src/: main.py  yolo_detection_class.py
